# OpenSZRaw

./: .gitignore  ATTRIBUTION.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  CONTRIBUTORS.md  CORPUS.md  Cargo.toml  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  ci.yml  publish.yml
crates/openszraw/: Cargo.toml
crates/openszraw-py/: Cargo.toml
crates/openszraw-py/src/: lib.rs
crates/openszraw/examples/: corpus_scan.rs
crates/openszraw/src/: lib.rs  reader.rs
crates/openszraw/src/raw/: lc_chrom.rs  mass_raw.rs  mod.rs  qgd.rs  qtfl.rs  timestamp.rs  ttfl.rs
crates/openszraw/tests/: conformance.rs
docs/: .gitignore  docusaurus.config.ts  package.json  sidebars.ts  wrangler.jsonc
docs/docs/: changelog.md  install.md  intro.md  license.md  quickstart.md
docs/docs/format/: known-limitations.md  lcd-ittof.md  lcd-qtof.md  ole2-container.md  overview.md  qgd-gcms.md
docs/docs/guide/: format-variants.md  mzml-export.md  python-api.md  reader.md  scan-data.md
docs/format/: 01-ole2-container.md  02-gcms-qgd-scans.md  03-lcd-ttfl-msdata.md  04-lcd-chromatogram-pda.md  05-qtfl-centroid.md  06-known-limitations.md  07-mass-raw-data-single-quad.md  08-metadata-and-processing-streams.md
scripts/: check-release-ready.sh
