[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "openszraw"
description = "Python bindings for the OpenSZRaw Shimadzu LabSolutions .lcd / .qgd file parser"
keywords = ["mass-spectrometry", "shimadzu", "lcd", "qgd", "metabolomics"]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache-2.0" }
authors = [{ name = "Nathan Riley", email = "git@nathanriley.com" }]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dynamic = ["version"]

[tool.maturin]
features = ["pyo3/extension-module"]
manifest-path = "crates/openszraw-py/Cargo.toml"
include = [
    { path = "LICENSE", format = "sdist" },
    { path = "README.md", format = "sdist" },
    { path = "README.md", format = "wheel" },
]

[project.urls]
Homepage = "https://sigilweaver.app/openszraw/"
Documentation = "https://sigilweaver.app/openszraw/docs/"
Source = "https://github.com/Sigilweaver/OpenSZRaw"
Issues = "https://github.com/Sigilweaver/OpenSZRaw/issues"
