[package]
name = "openszraw-py"
description = "Python bindings for the OpenSZRaw Shimadzu LabSolutions .lcd / .qgd reader."
readme = "../../README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[lib]
name = "openszraw"
crate-type = ["cdylib"]

[lints.rust]
unsafe_code = "allow"

[dependencies]
openszraw = { workspace = true }
openmassspec-core.workspace = true
pyo3 = { workspace = true }
